kubernetes/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: finbly-postgresql
  namespace: finbly
  labels:
    app: finbly-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finbly-postgres
  template:
    metadata:
      labels:
        app: finbly-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: finbly-postgresql-pvc
