kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: finbly
  name: finbly-backend-svc
spec:
  selector:
    app: finbly-backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: finbly
  name: finbly-frontend-svc
spec:
  selector:
    app: finbly-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: finbly-postgresql-svc
  namespace: finbly
spec:
  selector:
    app: finbly-postgresql
  ports:
    - name: http
      protocol: TCP
      port: 5432
      targetPort: 5432
